[package]
name = "errox"
version = "0.1.1"
edition = "2018"
license = "GPL-3.0"
description = "A simple and minimal error logging library."
repository = "https://github.com/tduck973564/errox"
documentation = "https://docs.rs/errox"
readme = "README.md"
keywords = ["log", "logging", "error", "library"]
categories = ["command-line-interface"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
colored = "2.0.0"
doc-comment = "0.3.3"